# python-project-52

./: .env  .flake8  .gitignore  Dockerfile  Makefile  Procfile  README.md  build.sh  compose.yml  conftest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_db.sqlite3
hexlet_code/: manage.py  settings.py  urls.py  wsgi.py
hexlet_code/hexlet_code/: urls.py
task_manager/: admin.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_options_alter_labels_created_at_and_more.py  0003_alter_labels_name.py  0004_alter_labels_options_labels_created_by.py
task_manager/migrations/: 0001_initial.py
task_manager/statuses/: api_urls.py  api_views.py  forms.py  models.py  permission.py  serializers.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_options_remove_statuses_created_by_and_more.py  0003_alter_statuses_options_statuses_created_by.py
task_manager/tasks/: api_urls.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
task_manager/tasks/filters/: task_filter.py
task_manager/tasks/migrations/: 0001_initial.py  (+4 more)
task_manager/templates/: base.html  create_users.html  index.html  update_users.html
task_manager/tests/: conftest.py
task_manager/users/: api_urls.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
(+26 files in other folders)
