[project]
name = "hexlet_code"
version = "0.1.0"
dependencies = [
    "django>=5.0",
    "gunicorn>=20.1",
    "dj-database-url>=2.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "django-bootstrap5>=25.1",
    "whitenoise>=6.9.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
